# apostle-predictor

./: .pre-commit-config.yaml  CLAUDE.md  README.md  asdf.ipynb  pyproject.toml  pytest.ini  run_simulation.py
.claude/agents/: code-linter.md  documentation-synchronizer.md
.github/: dependabot.yml
.github/workflows/: ci.yml  linting.yaml
src/apostle_predictor/: __init__.py  actuary_table.py  data_converters.py  simulation.py
src/apostle_predictor/models/: biography_models.py  leader_models.py  organization_models.py  seventies_models.py
tests/: test_e2e_simulation.py  test_simulation.py  test_web_scraping.py
