[project]
name = "apostle-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "andrew@protopia.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "auto-pydantic-cache==1.1.1",
    "beautifulsoup4==4.13.5",
    "httpx==0.28.1",
    "pandas==2.3.2",
    "pydantic==2.11.7",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit==4.0.1",
    "pyrefly==0.32.0",
    "pytest==8.4.2",
    "pytest-github-actions-annotate-failures==0.3.0",
    "ruff==0.12.12",
    "ty==0.0.1a20",
]

[tool.ruff]
# Set line length to 100 for better readability with descriptive names
line-length = 100

# Target Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Enable ALL available rules
select = ["ALL"]
# Exclude only truly inappropriate rules for this project
ignore = [
    # Allow certain naming patterns
    "N999",  # Invalid module name (conflicts with package structure)

    # Allow certain docstring patterns
    "D100",  # Missing docstring in public module (not always needed)
    "D104",  # Missing docstring in public package (not always needed)

    # Allow certain import patterns
    "TCH",   # flake8-type-checking (can be overly aggressive)

    # Allow print statements for CLI output
    "T201",  # print found

    # Allow certain complexity (but keep reasonable limits)
    "PLR0913",  # Too many arguments to function call (sometimes needed)

    # Allow certain patterns in tests
    "S101",   # Use of assert detected (needed in tests)
    "PLR2004", # Magic value used in comparison (common in tests)

    # Allow certain patterns for data science/ML code
    "PD",     # pandas-vet rules (can be overly restrictive for our use case)

    # Allow certain todo patterns
    "FIX002", # Line contains TODO (we want TODOs)
    "TD002",  # Missing author in TODO
    "TD003",  # Missing issue link in TODO

    # Allow certain patterns that are acceptable
    "N815",   # Variable names in Pydantic models match external API (mixedCase)
    "FBT001", # Boolean arguments in function definitions are acceptable
    "FBT002", # Boolean default arguments are acceptable
    "C901",   # Function complexity - will be addressed in future refactoring
    "PLR0912", # Too many branches - will be addressed in future refactoring
    "PLR0915", # Too many statements - will be addressed in future refactoring
    "ERA001", # Found commented-out code - some comments are intentional
    "BLE001", # Catching Exception is sometimes necessary for robustness
    "S311",   # Standard pseudo-random generators are sufficient for simulation
    "NPY002", # Legacy numpy random is acceptable for this use case
    "RUF001", # Unicode multiplication sign is intentional for display

    # Ignore rules that conflict with formatter
    "COM812", # Trailing comma missing (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
# Allow certain patterns in test files
"tests/**/*.py" = [
    "ANN",     # Missing type annotations (not critical for tests)
    "D",       # Missing docstrings (not critical for tests)
    "S",       # Security issues (not critical for tests)
    "SLF001",  # Private member accessed (common in tests)
    "E501",    # Line too long (test data can be long)
]

# Allow certain patterns in notebooks
"*.ipynb" = [
    "ALL",     # Skip all checks for notebooks (they're scratch pads)
]

[tool.ruff.lint.pydocstyle]
# Use Google docstring style
convention = "google"

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["apostle_predictor"]
